Fixed project card being too big

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @layer components {
 
     .project-card {
-        @apply relative flex flex-col items-center space-y-7 flex-shrink-0 w-[250px] aspect-[1/1.6] border-4 border-solid bg-primary border-purple-500 sm:w-[300px] md:w-[400px] xl:w-[450px] snap-center overflow-hidden;
+        @apply relative flex flex-col items-center space-y-7 flex-shrink-0 aspect-[1/1.6] border-4 border-solid bg-primary border-purple-500 w-[250px] sm:w-[300px] md:w-[350px] xl:w-[450px] snap-center overflow-hidden;
     }
 
     .card-content {
